--- a/css/style.css
+++ b/css/style.css
@@ -3,25 +3,34 @@
 *{
 	margin: 0;
 	padding: 0;
+	font-family: 'roboto',arial,sans-serif;
 }
 
 /* body */
 
 .inicio{
-	margin: 40px;
+	padding: 20px;
 	text-align: center;
+	background: black;
+	color: white;
 }
 
 .inicio h1{
 	text-transform: uppercase;
-	font-family: monospace;
 	margin: 20px;
-	
+	letter-spacing: 3px;	
+}
+
+.inicio h3{
+	letter-spacing: 2px;	
+	word-spacing: 8px;
 }
 
 .sobre{
 	padding: 20px;
+	background: #e8e8e8;
 }
+
 
 .sobre h3{
 	text-transform: uppercase;
@@ -30,15 +39,31 @@
 	margin-bottom: 10px;
 }
 
+.sobre a{
+	display: block;  /*para modificar o link*/
+	width: 140px;
+	border: 3px solid black;
+	color: black;
+	text-decoration: none;
+	font-weight: 700; /*ou bold*/
+	font-size: 1.125em;
+	text-align: center;
+	padding: 10px 0;
+	margin: 0 auto; 
+	transition: 0.6s;
+}
+
+.sobre a:hover{
+	color: #e8e8e8;
+	box-shadow: 140px 0 0 0 black inset;
+	transition: 0.6s;
+}
+
 .sobre img{
 	border: 3px solid #252525;
 	width: 360px;
 	display: block;
-	margin: 0 auto;
+	margin: 20px auto;
 }
 
-.sobre p{
-	padding: 10px 0;
-	text-align: center;
-}
 
